refactor: Fix spotbugs issues